Fixed positioning issues with logo on mobile screens

--- a/style.css
+++ b/style.css
@@ -6,9 +6,8 @@ body {
 }
 
 .logo{
-    position: absolute;
-    right: 0;
-    bottom: 10px;
+    position: relative;
+    text-align: right;
 }
 
 .logo img {
@@ -35,7 +34,7 @@ body {
 }
 
 .form-container {
-    padding: 10vh 20px 10vh 20px;
+    padding: 10vh 20px 6vh 20px;
 }
 
 .form-header {
@@ -46,7 +45,7 @@ body {
 }
 
 form {
-    margin-top: 50px;
+    margin-top: 30px;
 }
 
 .form-label {
